--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -7,10 +7,10 @@
 
 <div class="container" style="margin-top: 50px;">
     <center><i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
-    <h2 class="text-center">Payment Successful</h2>
+    <h2 class="text-center">Đặt hàng</h2>
 	<br>
 	<div class="text-center">
-		<a href="{% url 'store' %}" class="btn btn-success">Shop more</a>
+		<a href="{% url 'store' %}" class="btn btn-success">Mua thêm sản phẩm</a>
 	</div>
 </div>
 
@@ -46,10 +46,10 @@
                             <div class="invoice-details mt25">
                                 <div class="well">
                                     <ul class="list-unstyled mb0">
-                                        <li><strong>Order</strong>: {{order_number}}</li>
+                                        <li><strong>Số đơn hàng:</strong>: {{order_number}}</li>
                                 
-                                        <li><strong>Order Date:</strong>{{order.create_at}}</li>
-                                        <li><strong>Status:</strong> {{payment.status}}</li>
+                                        <li><strong>Ngày đặt hàng:</strong>{{order.create_at}}</li>
+                                        <li><strong>Thanh toán:</strong> COD </li>
                                     </ul>
                                 </div>
                             </div>
@@ -59,9 +59,9 @@
                                     <table class="table table-bordered">
                                         <thead>
                                             <tr>
-                                                <th class="per70 text-center">Description</th>
-                                                <th class="per5 text-center">Qty</th>
-                                                <th class="per25 text-center">Total</th>
+                                                <th class="per70 text-center">Mô tả sản phẩm</th>
+                                                <th class="per5 text-center">Số lượng</th>
+                                                <th class="per25 text-center">Tổng cộng</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -84,16 +84,16 @@
                                         </tbody>
                                         <tfoot>
                                             <tr>
-                                                <th colspan="2" class="text-right">Sub Total:</th>
+                                                <th colspan="2" class="text-right">thành tiền:</th>
                                                 <th class="text-center">{{subtotal}} VND</th>
                                             </tr>
                                             <tr>
-                                                <th colspan="2" class="text-right">Tax:</th>
+                                                <th colspan="2" class="text-right">VAT:</th>
                                                 <th class="text-center">{{order.tax}} VND</th>
                                             </tr>
                                             
                                             <tr>
-                                                <th colspan="2" class="text-right">Grand Total:</th>
+                                                <th colspan="2" class="text-right">Tổng tiền:</th>
                                                 <th class="text-center">{{order.order_total}} VND</th>
                                             </tr>
                                         </tfoot>
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="invoice-footer mt25">
-                                <p class="text-center">Thank you for shopping with us!</p>
+                                <p class="text-center">Cảm ơn bạn đã mua sắm tại shop chúng tôi!</p>
                             </div>
                         </div>
                         <!-- col-lg-12 end here -->
