--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -38,9 +38,9 @@
                 <table class="table table-borderless table-shopping-cart">
                     <thead class="text-muted">
                     <tr class="small text-uppercase">
-                      <th scope="col">Product</th>
-                      <th scope="col" width="120">Quantity</th>
-                      <th scope="col" width="120">Price</th>
+                      <th scope="col">Sản phẩm</th>
+                      <th scope="col" width="120">Số lượng</th>
+                      <th scope="col" width="120">Giá</th>
                       
                     </tr>
                     </thead>
@@ -90,15 +90,15 @@
             <div class="card">
             <div class="card-body">
                 <dl class="dlist-align">
-                  <dt>Total price:</dt>
+                  <dt>Thành tiền:</dt>
                   <dd class="text-right">VND {{ total }}</dd>
                 </dl>
                 <dl class="dlist-align">
-                  <dt>Tax:</dt>
+                  <dt>VAT:</dt>
                   <dd class="text-right">VND {{ tax }}</dd>
                 </dl>
                 <dl class="dlist-align">
-                  <dt>Grand total:</dt>
+                  <dt>Tổng giá trị:</dt>
                   <dd class="text-right text-dark b"><strong>VND {{ grand_total }}</strong></dd>
                 </dl>
                 <hr>
