--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -100,10 +100,10 @@
             </dl>
             <hr>
             <p class="text-center mb-3">
-                <img src="{% static './images/misc/payments.png' %}" height="26">
+                <img src="{% static './images/misc/cash.png' %}" height="26">
             </p>
-            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
-            <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Thanh toán </a>
+            <a href="{% url 'store' %}" class="btn btn-light btn-block">Tiếp tục mua sắm</a>
         </div> <!-- card-body.// -->
         </div> <!-- card.// -->
     
